--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "promotion_vegas",
+  "name": "fastify_be_project",
   "version": "1.0.0",
-  "description": "Promotion MKT team manangment ",
+  "description": "fastify_be_project ",
   "main": "index.js",
   "author": "HuuDan - Thomas",
   "license": "MIT",
@@ -9,16 +9,19 @@
   "keywords": [],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "dev": "nodemon app.js"
   },
   "dependencies": {
+    "@fastify/cors": "^10.0.1",
+    "@fastify/static": "^8.0.2",
     "body-parser": "^1.20.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
-    "exceljs": "^4.3.0",
     "express": "^4.18.2",
+    "fastify": "^5.0.0",
     "fs": "^0.0.1-security",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.0",
@@ -30,11 +33,11 @@
     "multer": "^1.3.0",
     "multer-gridfs-storage": "^1.3.0",
     "path": "^0.12.7",
+    "pino-pretty": "^11.3.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "swagger-ui-express": "^4.5.0",
     "util": "^0.12.4",
-    "uuid": "^9.0.0",
-    "xlsx": "^0.18.5"
+    "uuid": "^9.0.0"
   }
 }
